syntax = "proto3";
package rfq;

service RequestForQuote {
  // Our RequestForQuote rpc accepts RFQs and returns Quotes
  rpc RequestQuote (QuoteRequest) returns (QuoteResponse);
}

message QuoteRequest {
  // Request message contains the name to be greeted
  string token = 1;
}

message QuoteResponse {
  // Reply contains the greeting message
  string price = 1;
}